--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic-CC_Box-Model_2</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <section>
             <p>This is a paragraph to help you understand 
